# star-helix

./: .pdm.toml  README.md  noisy.py  pyproject.toml
shelix/: main.py
shelix_cli/: log_socket.py  main.py
