[project]
name = "star-helix-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Bailey", email = "paul@cognitivespace.com"},
]
dependencies = [
    "typer",
    "haikunator",
    "asynchronousfilereader",
    "httpx>=0.21.3",
    "websocket-client>=1.2.3",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[tool.pdm.scripts]
_.env_file = ".env"
noisy = "./shelix_cli/main.py \"python3 noisy.py\""


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
