[project]
name = "star-helix"
description = "Logging service client code and cli"
dynamic = ["version"]
authors = [
    {name = "Paul Bailey", email = "paul@cognitivespace.com"},
]
dependencies = [
    "typer",
    "haikunator",
    "asynchronousfilereader",
    "httpx>=0.21.3",
    "websocket-client>=1.2.3",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/cognitive-space/star-helix"

[project.scripts]
shelix = "shelix.main:run_cli"

[tool]
[tool.pdm]

[tool.pdm.scripts]
_.env_file = ".env"
noisy = "./shelix_cli/main.py \"python3 noisy.py\""
publish = "pdm publish --username pizzapanther"


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
