[project]
name = "star-helix"
description = "Logging service client code and cli"
dynamic = ["version"]
authors = [
    {name = "Paul Bailey", email = "paul@cognitivespace.com"},
]
dependencies = [
    "typer",
    "haikunator",
    "asynchronousfilereader",
    "httpx>=0.21.3",
    "websocket-client>=1.2.3",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/cognitive-space/star-helix"

[project.scripts]
shelix = "shelix.main:run_cli"

[project.optional-dependencies]
[tool]
[tool.pdm]
version = {from = "shelix/__init__.py"}

[tool.pdm.scripts]
_.env_file = ".env"
noisy = "./shelix/main.py \"python3 noisy.py\""
publish = "pdm publish --username pizzapanther"


[tool.pdm.dev-dependencies]
dev = [
    "twine>=3.7.1",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
